refactor: remove auth tag to routes to fit teacher requirements
